--- a/css/style.css
+++ b/css/style.css
@@ -151,10 +151,114 @@ img {
   opacity: 0.7;
 }
 
-h1.slide {
-  color: white;
-  margin-top: 30%;
+
+h1.logo {
+  font-family: 'Liu Jian Mao Cao', cursive;
+  color: #fff;
+  font-size: 80px;
+  font-weight: bold;
+  margin-top: 2%;
+  letter-spacing: 5px;
 }
 
+h1.slide {
+  color: #fff;
+  margin-top: 250px;
+}
+
+@media (max-width: 576px) {
+  h1.logo {
+    font-family: 'Liu Jian Mao Cao', cursive;
+    color: #fff;
+    font-size: 50px;
+    font-weight: bold;
+    margin-top: 10%;
+  }
+
+  h1.slide { 
+    font-size: 40px;
+    color: white;
+  }
+}
+
+@media (min-width: 577px) and (max-width: 768px) {
+  h1.slide {
+    color: white;
+    margin-top: 70%;
+  }
+}
+
+@media (min-width: 769px) {
+
+}
+
+div#post.col-12 {
+  padding: 0px;
+  margin-bottom: 20px;
+}
+
+p#post.text-left {
+  margin: 0px;
+}
+
+div#post.col-5 {
+  padding-right: 0px;
+}
+
+
+
+
+.tabs {
+  font-size: 0;
+  max-width: 350px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.tabs>input[type="radio"] {
+  display: none;
+}
+
+.tabs>div {
+  display: none;
+  padding: 10px 15px;
+  font-size: 16px;
+}
+
+#tab-btn-1:checked~#content-1,
+#tab-btn-2:checked~#content-2,
+#tab-btn-3:checked~#content-3 {
+  display: block;
+  border: 2px solid #5181B8;
+}
+
+.tabs>label {
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
+  user-select: none;
+  background-color: #272727;
+  padding: 2px 8px;
+  font-size: 16px;
+  line-height: 1.5;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out;
+  cursor: pointer;
+  position: relative;
+  top: 1px;
+}
+
+.tabs>label:not(:first-of-type) {
+  border-left: none;
+}
+
+.tabs>input[type="radio"]:checked+label {
+  background-color: #5181B8;
+  text-align: left;
+  padding: 15px;
+}
+
+label {
+  margin: 0px;
+}
 
 
