Add post.html for project

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -123,6 +123,10 @@ div.col-md-12.col-lg-4{
   background: #272727;
 }
 
+div.col-md-12.col-lg-8{
+  background: #272727;
+}
+
 div.poster {
   margin-top: 30px;
   background: #272727;
